# rust-snake

./: Cargo.toml  index.html
src/: lib.rs
web/: index.html  package-lock.json  package.json
web/src/: index.ts
