[package]
name = "hungry-snake"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["daydayhappychao <wangchaomagin@gmail.com>"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }